[package]
name = "helloworld"
version = "0.1.0"
authors = ["Forevka <zebestforevka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = "0.4.0-alpha0.5"
rand = "0.6.5"

[[bin]]
name = "helloworld"
path = "main.rs"
